Fix issue with whitespace beneath Footer component on small viewports and added overall padding

--- a/src/assets/stylesheets/components/_footer.scss
+++ b/src/assets/stylesheets/components/_footer.scss
@@ -26,6 +26,6 @@
 
 @media only screen and (max-width: 576px) {
   .Footer-container {
-    padding: 0 0 0 2em;
+    padding: 1em;
   }
 }
